# migration_tool

./: README.md  pyproject.toml  requirements.txt
.schema_cache/: smart_lots_v2.1_schema.json  smash_lab_schema.json
config/: example.yaml  sample_data.yaml  simple.yaml
data/: sample_categories.csv  sample_customers.csv  sample_products.csv
migration_tool/: __init__.py  __main__.py  cli.py
migration_tool/api/: __init__.py  jobs.py  main.py  models.py
migration_tool/config/: __init__.py  loader.py
migration_tool/core/: __init__.py  batcher.py  cleaner.py  deduplicator.py  logger.py  multi_import.py  quality_stats.py  reader.py  templates.py  validation_rules.py  validator.py
migration_tool/core/schema/: __init__.py  cache.py  classifier.py  inspector.py  models.py
migration_tool/gui/: __init__.py  pyqt_app.py
migration_tool/odoo/: __init__.py  adapters.py  client.py
migration_tool/schemas/: __init__.py  account.py  category.py  partner.py  product.py  uom.py
odoo_migration_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cleaner.py  test_deduplicator.py  test_reader.py  test_schema.py  test_validator.py
